--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an article</h1>
+<h1>Edit existing article</h1>
 
 <% if @article.errors.any? %>
 <h2>The following errors prevented the article from being created.</h2>
@@ -13,6 +13,8 @@
 <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %><br>
+</p>
+<p>
     <%= f.label :description %><br>
     <%= f.text_area :description %><br>
 </p>
