--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
 <h2>This is the homepage</h2>
 
-<%= link_to 'About', about_path %>
+<%= link_to 'Alpha Blog', articles_path %> | <%= link_to 'About', about_path %>
