Style articles listing page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -46,13 +46,24 @@ $navbar-default-bg: black;
   padding-top: 5px;
 }
 
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+}
+
 .description {
   margin-top: 0;
 }
 
-.article-actions {
+.article-title {
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.article-body {
   border-top: 1px solid #eaeaea;
-  padding-top: 5px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 footer {
