--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,4 +5,10 @@
   </div><!-- col-md-4 -->
 </div><!-- row -->
 <h4 align="center"><%= @user.username %>'s articles</h4>
-<%= render 'articles/article', obj: @user.articles %>
+<div class="center">
+  <%= will_paginate @user_articles %>
+</div><!-- center -->
+<%= render 'articles/article', obj: @user_articles %>
+<div class="center">
+  <%= will_paginate @user_articles %>
+</div><!-- center -->
